# BrowseComp-Plus

./: .gitignore  CLAUDE.md  NOTABLE_ASSUMPTIONS.md  README.md  TRACE_VIEWER_README.md  analyze_plan_quality_correlation.py  auto_pipeline.py  auto_pipeline.sh  combine_json_to_jsonl.py  compute_repeats.py  compute_repeats_vllm.py  filter_by_query_ids.py  find_missing_ids.py  generate_plans_gpt5.py  generate_qampari_results.py  generate_retrospective_plans.py  generator.py  monitor_and_eval.sh  override.txt  paired_bootstrap_eval_summaries.py  parse_output.py  plan_viewer.py  portkey.py  pyproject.toml  query_grader.py  requirements.txt  run_qwen3_first50.SBATCH  run_qwen3_planning.SBATCH  run_qwen3_test150.SBATCH  run_qwen3_train680.SBATCH  scout_explore.md  select_tools.sbatch  select_useful_tool_calls.py  shard_monitor.py  submit_missing.py  summarize_trajectories.py  trace_viewer.py  trace_viewer_qampari.py  vllm_planner.py  write_embed.py  (+1 more)
.devcontainer/: devcontainer.json
data/: browsecomp_plus_decrypted.jsonl  browsecomp_plus_id2query.json  qampari_id2query.json
docs/: ARCHITECTURE.md  README.md  RUN_WORKFLOW.md  anthropic.md  gemini.md  openai.md  oss.md  scout-explorer-agent.md  search-r1.md  tongyi.md
eval_plan_quality/: analyze_plan_persistence.py  compare_plans.py  comparison_results.jsonl  criteria_memory.py  eval_plan_following.py  llm_judge.py  plan_following_scores.csv
parametric/: generator.py  grade_generated_doc.py
prompts/: generated_document_grader.txt  generator.txt  planning_prompt_experiment_v3.md  planning_prompt_feedback_to_v2_and_v1.md  planning_prompt_feedback_to_v3.md  planning_prompt_feedback_to_v3_1.md  planning_prompt_v0.5.md  planning_prompt_v1.md  planning_prompt_v2.md  planning_prompt_v2_context.md  planning_prompt_v3.md  planning_prompt_v4.1.md  planning_prompt_v4.md  query_grader.txt  query_grader_doc.txt  replan_prompt_v0.7.md  replan_prompt_v1.md  replan_prompt_v2.md  replan_prompt_v3.md  replan_prompt_v4.md
qampari_experiments/: download.py  generate_qampari_results.py  generate_qampari_results.sh
sbatch/: run_bcp_eval_glm_test150_explorer.SBATCH  run_bcp_eval_glm_test150_random_tools.SBATCH  run_bcp_eval_minimax_test150_explorer.SBATCH  run_bcp_eval_minimax_test150_random_tools.SBATCH  run_bcp_eval_qwen3_5_test150_random_tools.SBATCH  run_bcp_test150_glm_budget5.SBATCH  run_bcp_test150_glm_explorer_traj_orig.SBATCH  run_bcp_test150_minimax_budget5.SBATCH  run_bcp_test150_minimax_explorer_traj_orig.SBATCH
scripts/: README.md  augment_selected_tool_calls_with_candidates_seed0.py  build_random_tool_calls_input.py  build_scout_runs_dataset.py  build_selected_tools_analysis_dataset.py  check_selected_against_candidates_seed0.py  compute_best_of_n.py  compute_frames_recall.py  compute_selected_tool_calls_stats.py  generate_random_tool_calls_seeds.sh  (+11 more)
(+249 files in other folders)
