[project]
name = "browsecomp-plus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<4.0"
dependencies = [
    "accelerate>=1.9.0",
    "anthropic>=0.58.2",
    "datasets>=4.0.0",
    "faiss-cpu>=1.8.0.post1",
    "fastmcp==2.9.2",
    "google-genai>=1.27.0",
    "openai>=1.97.0",
    "peft>=0.16.0",
    "pyngrok>=7.2.12",
    "pyserini>=1.2.0",
    "python-dotenv>=1.1.1",
    "qwen-agent[gui,mcp,rag]==0.0.31",
    "qwen-omni-utils==0.0.8",
    "rich>=14.0.0",
    "streamlit>=1.40.0",
    "tevatron",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    # NOTE: No vllm or deepspeed here
]

[project.optional-dependencies]
gpu = [
    "deepspeed>=0.17.2",
    "vllm>=0.9.0 ; python_version < '3.13'",
]

[tool.uv.sources]
tevatron = { git = "https://github.com/texttron/tevatron.git", rev = "main" }

# If Poetry is used, mirror the python bound to avoid solver warnings
[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"